<resources>
    <string name="app_name">ObservaPlanta</string>
    <string name="plante_nom_label">Nom de la plante</string>
    <string name="plante_nom_hint">Entrer le nom de la plante</string>
    <string name="plante_nomLatin_label">Nom latin de la plante</string>
    <string name="plante_nomLatin_hint">Entrer le nom latin de la plante</string>
    <string name="plante_supprimer_label">Supprimer</string>
    <string name="plante_image_description">Image de la plante</string>
    <string name="plante_ajouter">Ajouter_plante</string>
    <string name="selectionneur_ensoleillement">Selectionneur ensoleillement</string>
    <string name="selectionneur_arrosage">Selectionneur arrosage</string>
    <string name="partager">Partager</string>
    <string name="search_bar">Barre de recherche</string>
    <string name="button_camera">Button Camera</string>
    <string name="confirmation">Confirmer la suppression</string>
    <string name="confirm_question">Êtes-vous sur de supprimer cette plante</string>
</resources>